added darkBtn and join-animation login

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    Hallo
+    <img class="posAbsolute logoSlideIn" src="./img/joinLogoBig.png" alt="Join-Logo">
+    <div class="posAbsolute right0 padTop60 padRight60">
+        <span class="fontSize16">Not a Join user?</span>
+        <button class="cursorPointer darkBtn fontBold fontSize16">Sign up</button>
+    </div>
 </body>
 </html>
