--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 </head>
 <body>
     <img class="posAbsolute logoSlideIn" src="./img/joinLogoBig.png" alt="Join-Logo">
-    <div class="posAbsolute right0 padTop60 padRight60">
-        <span class="fontSize16">Not a Join user?</span>
+    <section class="posAbsolute right0 padTop60 padRight60">
+        <span class="fontSize16 padRight30">Not a Join user?</span>
         <button class="cursorPointer darkBtn fontBold fontSize16">Sign up</button>
-    </div>
+    </section>
+    <section class="overDivFormLogIn">
+        <form class="formLogIn">
+            <h1>
+                Log in
+            </h1>
+        </form>
+    </section>
+    <section class="posAbsolute bot60LeftCenter">
+        <a class="noDecoration fontLightGrey hoverFontLightBlue hoverFontBold padRight30" href="#">Privacy Policy</a>
+        <a class="noDecoration fontLightGrey hoverFontLightBlue hoverFontBold" href="#">Legal notice</a>
+    </section>
 </body>
 </html>
