Update Contact Page

--- a/contacts.html
+++ b/contacts.html
@@ -30,8 +30,8 @@
                 <div class="name-mail">
                     <h3>Anton Mayer</h3>
                     <div class="logos">
-                        <div class="edit"><img src="./styles/img/edit.png">Edit</div>
-                        <div class="delete"><img src="./styles/img/delete.png">Delete</div>
+                        <div class="edit"><img src="./img/edit.png">Edit</div>
+                        <div class="delete"><img src="./img/delete.png">Delete</div>
                     </div>
                 </div>
             </div>
