added transparent global btn

--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
         <button class="cursorPointer darkBtn fontBold fontSize16">Sign up</button>
     </section>
     <section class="overDivFormLogIn">
-        <form class="formLogIn">
+        <form class="formLogIn dFlex directionColumn alignCenter">
             <h1>
                 Log in
             </h1>
+            <div class="blueLine"></div>
+            <input class="marBot16px" type="email" required>
+            <input class="marBot16px" type="password" required>
+            <div>
+                <input id="logInRememberMe" type="checkbox">
+                <label for="logInRememberMe">Remember me</label>
+            </div>
+            <div>
+                <button class="cursorPointer darkBtn fontBold fontSize16">Log in</button>
+                <div class="overDivGuestLogInBtn">
+                    <div class="cursorPointer fontDarkBlue fontBold fontSize16 transparentBtn">Guest Log in</div>
+                </div>
+            </div>
         </form>
     </section>
     <section class="posAbsolute bot60LeftCenter">
