--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 </head>
 <body>
     <img class="posAbsolute logoSlideIn" src="./img/joinLogoBig.png" alt="Join-Logo">
-    <section class="posAbsolute right0 padTop60 padRight60">
+    <section class="posAbsolute right0 padTop60 padRight60 opacity0to1">
         <span class="fontSize16 padRight30">Not a Join user?</span>
         <button class="cursorPointer darkBtn fontBold fontSize16">Sign up</button>
     </section>
-    <section class="overDivFormLogIn">
+    <section class="overDivFormLogIn opacity0to1">
         <form class="formLogIn dFlex directionColumn alignCenter">
             <h1>
                 Log in
             </h1>
             <div class="blueLine"></div>
-            <input class="marBot16px" type="email" required>
-            <input class="marBot16px" type="password" required>
+            <div class="posRelative">
+                <input class="cursorPointer marBot16px fontSize16 logInInputBorder" type="email" required>
+                <img class="posAbsolute logInInputPicture height13 right11 top11" src="./img/logInMail.png" alt="E-Mail-picture">
+            </div>
+            <div class="posRelative">
+                <input class="cursorPointer marBot16px fontSize16 logInInputBorder" type="password" required>
+                <img class="posAbsolute logInInputPicture height15 right11 top9" src="./img/logInLock.png" alt="Password-picture">
+            </div>
             <div>
                 <input id="logInRememberMe" type="checkbox">
                 <label for="logInRememberMe">Remember me</label>
@@ -33,7 +39,7 @@
             </div>
         </form>
     </section>
-    <section class="posAbsolute bot60LeftCenter">
+    <section class="posAbsolute bot60LeftCenter opacity0to1">
         <a class="noDecoration fontLightGrey hoverFontLightBlue hoverFontBold padRight30" href="#">Privacy Policy</a>
         <a class="noDecoration fontLightGrey hoverFontLightBlue hoverFontBold" href="#">Legal notice</a>
     </section>
