--- a/board.html
+++ b/board.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Board</title>
     <link rel="stylesheet" href="styles/board.css" />
-  </head>
-  <body>
-    <header><h1>Kanban Project Management Tool</h1></header>
-    <nav>
-      <p>Replaced later</p>
-      <p>Replaced later</p>
-      <p>Replaced later</p>
-    </nav>
+    <link rel="stylesheet" href="../styles/style.css" />
+    <script src="/js/navBar.js"></script>
+</head>
+<body onload="includeHTML()">
+    <div w3-include-html="/templates/navBar.html"></div>
+    <div w3-include-html="/templates/header.html"></div>
     <div class="menuwrapper">
       <div class="menubar">
         <h2>Board</h2>
@@ -21,6 +19,13 @@
          
           <button>Add Task <img src="img/add.png"></button>
         </div>
+      
+      </div>
+      <div class="progressBar">
+        <div class="lineUp">To do <img src="img/plus button.png"></div>
+        <div class="lineUp">In  progress<img src="img/plus button.png"></div>
+        <div class="lineUp">Await Feedback<img src="img/plus button.png"></div>
+        <div class="lineUp"> Done</div>
       </div>
       </div>
     </div>
