--- a/board.html
+++ b/board.html
@@ -13,11 +13,11 @@
     <div w3-include-html="/templates/header.html"></div>
     <div class="menuwrapper">
       <div class="menubar">
-        <h2>Board</h2>
+       <div class="headline">Board</div>
         <div class="searchAdd">
             <div class="fakeInput"> <input type="text" placeholder="Find Task" /> <img src="img/search.png"></div>
          
-          <button>Add Task <img src="img/add.png"></button>
+          <div class ="addTask"><button>Add Task <img src="img/add.png"></button></div>
         </div>
       
       </div>
