--- a/help.html
+++ b/help.html
@@ -11,29 +11,30 @@
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="main-help-container">
+        <img class="arrow" src="/img/arrow-left-line.png" alt="">
         <h1>Help</h1> 
-        <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.</p>
+        <p>Welcome to the help page for <span class="blue">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what <span class="blue">Join</span> is, how it can benefit you, and how to use it.</p>
         <h2>What is Join?</h2>
-        <p>Join is a kanban-based project management tool designed and built by a group of dedicated students as part of their web development bootcamp at the Developer Akademie. <br>
+        <p><span class="blue">Join</span> is a kanban-based project management tool designed and built by a group of dedicated students as part of their web development bootcamp at the Developer Akademie. <br>
             <br>
-            Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual interface. <br>
+            Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize efficiency (or flow). <span class="blue">Join</span> leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual interface. <br>
             <br>
-            It is important to note that Join is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding Join.
+            It is important to note that <span class="blue">Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding <span class="blue">Join</span>.
         </p>
         <h2>How to use it</h2>
-        <p>Here is a step-by-step guide on how to usw Join:</p>
+        <p>Here is a step-by-step guide on how to usw <span class="blue">Join</span>:</p>
         <div class="how-to-use">
             <div class="number">1.</div>
             <div>
                 <h3>Exploring the Board</h3>
-                <p>When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".</p>
+                <p>When you log in to <span class="blue">Join</span>, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".</p>
             </div>
         </div>
         <div class="how-to-use">
             <div class="number">2.</div>
             <div>
                 <h3>Creating Contacts</h3>
-                <p>In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</p>
+                <p>In <span class="blue">Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</p>
             </div>
         </div>
         <div class="how-to-use">
@@ -56,9 +57,9 @@
                 <h3>Deleting Cards</h3>
                 <p>Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercise caution when deleting cards, as this action is irreversible. <br>
                 <br>
-                Remember that using Join effectively requires consistent updates from you and your team to ensure the board reflects the current state of your project. <br>
+                Remember that using <span class="blue">Join</span> effectively requires consistent updates from you and your team to ensure the board reflects the current state of your project. <br>
                 <br>
-                Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help you!
+                Have more questions about <span class="blue">Join</span>? Feel free to contact us at [Your Contact Email]. We're here to help you!
                 </p>
             </div>
         </div>
