--- a/contacts.html
+++ b/contacts.html
@@ -24,6 +24,23 @@
                 <a href="">antom@gmail.com</a>
                 </div>
             </div>
+            <div class="informations">
+                <div class="user-small">AS</div>
+                <div>
+                    Anja Schulz <br>
+                <a href="">schulz@hotmail.com</a>
+                </div>
+            </div><div class="letter">
+                B
+            </div>
+            <div class="line-contacts"></div>
+            <div class="informations">
+                <div class="user-small">BZ</div>
+                <div>
+                    Benedikt Ziegler <br>
+                <a href="">benedikt@gmail.com</a>
+                </div>
+            </div>
         </div>
 
         <div class="right-side">
