Finished Contact Page

--- a/contacts.html
+++ b/contacts.html
@@ -13,53 +13,57 @@
     <div class="contact-container">
         <div class="left-side">
             <div class="add-button"><button>Add new contact</button></div>
-            <div class="letter">
-                A
-            </div>
-            <div class="line-contacts"></div>
-            <div class="informations">
-                <div class="user-small">AM</div>
-                <div>
-                    Anton Mayer <br>
-                <a href="">antom@gmail.com</a>
+            <div class="contact-area">
+                <div class="letter">
+                    A
                 </div>
-            </div>
-            <div class="informations">
-                <div class="user-small">AS</div>
-                <div>
-                    Anja Schulz <br>
-                <a href="">schulz@hotmail.com</a>
+                <div class="line-contacts"></div>
+                <div class="informations">
+                    <div class="user-small">AM</div>
+                    <div>
+                        Anton Mayer <br>
+                    <a href="">antom@gmail.com</a>
+                    </div>
                 </div>
-            </div><div class="letter">
-                B
-            </div>
-            <div class="line-contacts"></div>
-            <div class="informations">
-                <div class="user-small">BZ</div>
-                <div>
-                    Benedikt Ziegler <br>
-                <a href="">benedikt@gmail.com</a>
+                <div class="informations">
+                    <div class="user-small">AS</div>
+                    <div>
+                        Anja Schulz <br>
+                    <a href="">schulz@hotmail.com</a>
+                    </div>
+                </div><div class="letter">
+                    B
+                </div>
+                <div class="line-contacts"></div>
+                <div class="informations">
+                    <div class="user-small">BZ</div>
+                    <div>
+                        Benedikt Ziegler <br>
+                    <a href="">benedikt@gmail.com</a>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="right-side">
-            <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
-            <div class="contact-info">
-                <div class="user">AM</div> 
-                <div class="name-mail">
-                    <h3>Anton Mayer</h3>
-                    <div class="logos">
-                        <div class="edit"><img src="./img/edit.png">Edit</div>
-                        <div class="delete"><img src="./img/delete.png">Delete</div>
+            <div class="right-side-infos">
+                <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
+                <div class="contact-info">
+                    <div class="user">AM</div> 
+                    <div class="name-mail">
+                        <h3>Anton Mayer</h3>
+                        <div class="logos">
+                            <div class="edit"><img src="./img/edit.png">Edit</div>
+                            <div class="delete"><img src="./img/delete.png">Delete</div>
+                        </div>
                     </div>
                 </div>
+                <h4>Contact Information</h4>
+                <h5>Email</h5>
+                <a href="">antom@gmail.com</a>
+                <h5>Phone</h5>
+                +49 1111 111 11 1
             </div>
-            <h4>Contact Information</h4>
-            <h5>Email</h5>
-            <a href="">antom@gmail.com</a>
-            <h5>Phone</h5>
-            +49 1111 111 11 1
         </div>
     </div> 
 </body>
