visibility index.html

--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
             </h1>
             <div class="blueLine"></div>
             <div class="posRelative">
-                <input class="cursorPointer marBot20 fontSize16 logInInputBorder" type="email" required>
-                <img class="posAbsolute logInInputPicture height13 right11 top11 pointerEventsNone" src="./img/logInMail.png" alt="E-Mail-picture">
+                <input placeholder="Email" id="logInEmail" class="cursorPointer marBot20 fontSize16 logInInputBorder" type="email" required>
+                <img onclick="focusOnEmailInput()" class="posAbsolute logInInputPicture height13 right11 top11 cursorPointer" src="./img/logInMail.png" alt="E-Mail-picture">
             </div>
             <div class="posRelative">
-                <input id="logInPassword" oninput="logInShowEyeOrLock()" onfocusout="logInShowLock()" class="cursorPointer marBot20 fontSize16 logInInputBorder" type="password" required>
-                <img id="logInLock" class="posAbsolute logInInputPicture height18 right11 top9 pointerEventsNone" src="./img/logInLock.png" alt="Password-picture">
-                <img id="logInVisibilityOff" class="posAbsolute right11 height15 top11 pointerEventsNone d-none" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
+                <input placeholder="Password" id="logInPassword" oninput="logInShowEyeOrLock()" onfocusout="logInShowLock()" class="cursorPointer marBot20 fontSize16 logInInputBorder" type="password" required>
+                <img id="logInLock" onclick="focusOnPswInput()" class="posAbsolute logInInputPicture height18 right11 top9 cursorPointer" src="./img/logInLock.png" alt="Password-picture">
+                <img id="logInVisibilityOnOrOff" onclick="logInVisibilityOnOff()" class="posAbsolute right11 height15 top11 d-none cursorPointer" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
+                <!-- <img id="logInVisibilityOn" onclick="logInVisibilityOff()" class="posAbsolute right11 height15 top11 d-none" src="./img/registerOpenEye.png" alt="visibility-on-picture"> -->
             </div>
-            <div class="marBot20">
-                <input id="logInRememberMe" type="checkbox">
-                <label for="logInRememberMe">Remember me</label>
+            <div class="marBot20 fontSize14 dFlex alignCenter">
+                <img id="logInCheckedCheckbox" class="registerCheckedCheckbox d-none" src="./img/registerCheckedCheckbox.png" alt="checked checkbox">
+                <input id="logInRememberMe" class="cursorPointer" type="checkbox">
+                <label for="logInRememberMe" class="padLeft8">Remember me</label>
             </div>
             <div class="dFlex">
                 <button class="cursorPointer darkBtn fontBold fontSize16">Log in</button>
