--- a/register.html
+++ b/register.html
@@ -18,19 +18,19 @@
             <h1>Sign up</h1>
             <div class="blueLine"></div>
             <div class="marBot20">
-                <input class="cursorPointer logInInputBorder fontSize16" placeholder="Name" minlength="3" type="text">
+                <input id="registerName" class="cursorPointer logInInputBorder fontSize16" placeholder="Name" minlength="3" type="text">
                 <img src="" alt="">
             </div>
             <div class="marBot20">
-                <input class="cursorPointer logInInputBorder fontSize16" placeholder="Email" minlength="4" type="email">
+                <input id="registerEmail" class="cursorPointer logInInputBorder fontSize16" placeholder="Email" minlength="4" type="email">
                 <img src="" alt="">
             </div>
             <div class="marBot20">
-                <input class="cursorPointer logInInputBorder fontSize16" placeholder="Password" minlength="7" type="password">
+                <input id="registerFirstPassword" class="cursorPointer logInInputBorder fontSize16" placeholder="Password" minlength="7" type="password">
                 <img src="" alt="">
             </div>
             <div class="marBot20">
-                <input class="cursorPointer logInInputBorder fontSize16" placeholder="Confirm Password" minlength="7" type="password">
+                <input id="registerSecondPassword" class="cursorPointer logInInputBorder fontSize16" placeholder="Confirm Password" minlength="7" type="password">
                 <img src="" alt="">
             </div>
             <div class="dFlex alignCenter marBot20">
