--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/index.css">
     <script src="./js/register.js" defer></script>
+    <script src="./js/index.js" defer></script>
 </head>
 <body>
     <img class="posAbsolute registerJoinLogo" src="./img/joinLogoBig.png" alt="Join-Logo">
@@ -17,29 +18,26 @@
             </div>
             <h1>Sign up</h1>
             <div class="blueLine"></div>
-            <div class="marBot20">
+            <div class="marBot20 posRelative">
                 <input id="registerName" class="cursorPointer logInInputBorder fontSize16" placeholder="Name" minlength="3" type="text">
-                <img src="" alt="">
+                <img onclick="focusOn('registerName')" class="posAbsolute logInInputPicture height15 right15 top11 cursorPointer" src="./img/registerPerson.png" alt="profile-img">
             </div>
-            <div class="marBot20">
+            <div class="marBot20 posRelative">
                 <input id="registerEmail" class="cursorPointer logInInputBorder fontSize16" placeholder="Email" minlength="4" type="email">
-                <img src="" alt="">
+                <img onclick="focusOn('registerEmail')" class="posAbsolute logInInputPicture height13 right15 top11 cursorPointer" src="./img/logInMail.png" alt="email-img">
             </div>
-            <div class="marBot20">
+            <div class="marBot20 posRelative">
                 <input id="registerFirstPassword" class="cursorPointer logInInputBorder fontSize16" placeholder="Password" minlength="7" type="password">
-                <img src="" alt="">
+                <img onclick="focusOn('registerFirstPassword')" class="posAbsolute logInInputPicture height18 right15 top9 cursorPointer" src="./img/logInLock.png" alt="lock-img">
             </div>
-            <div class="marBot20">
+            <div class="marBot20 posRelative">
                 <input id="registerSecondPassword" class="cursorPointer logInInputBorder fontSize16" placeholder="Confirm Password" minlength="7" type="password">
-                <img src="" alt="">
+                <img onclick="focusOn('registerSecondPassword')" class="posAbsolute logInInputPicture height18 right15 top9 cursorPointer" src="./img/logInLock.png" alt="lock-img">
             </div>
             <div class="dFlex alignCenter marBot20">
-                <label class="fontLightGrey cursorPointer posRelative">
-                    <img id="registerCheckedCheckbox" class="registerCheckedCheckbox d-none" src="./img/registerCheckedCheckbox.png" alt="checked checkbox">
-                    <input id="registerCheckbox" class="cursorPointer registerAcceptPrivacy"  type="checkbox">
-                    <span id="registerSpanAccept" class="padLeft8">I accept the</span>   
-                </label>
-                <a class="noDecoration fontLightBlue hoverBlueUnderline padLeft8" href="./privacyPolicy.html">Privacy Policy</a>
+                <img onclick="changeCheckbox('registerCheckbox')" id="registerCheckbox" class="registerCheckbox cursorPointer" src="./img/checkboxNotChecked.png" alt="checkbox">
+                <span id="registerSpanAccept" class="fontSize14 padLeft8 fontLightGrey">I accept the</span>   
+                <a class="noDecoration fontSize14 fontLightBlue hoverBlueUnderline padLeft8" href="./privacyPolicy.html">Privacy Policy</a>
             </div>
             <button class="darkBtn cursorPointer fontSize16 fontBold">Sign up</button>
         </form>
