--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
     <div w3-include-html="/templates/header.html"></div>
     <div class="contact-container">
         <div class="d-none" id="overlay-add-contact"></div>
+        <div class="d-none" id="overlay-edit-contact"></div>
         <div class="left-side">
             <div class="add-button"><button class="button1" onclick="addNewContact()">Add new contact</button></div>
             <div class="contact-area">
@@ -55,7 +56,7 @@
                     <div class="name-mail">
                         <h3>Anton Mayer</h3>
                         <div class="logos">
-                            <div class="edit"><img src="./img/edit-black.png">Edit</div>
+                            <div onclick="editContact()" class="edit"><img src="./img/edit-black.png">Edit</div>
                             <div class="delete"><img src="./img/delete.png">Delete</div>
                         </div>
                     </div>
