finished progress bar, add card design

--- a/board.html
+++ b/board.html
@@ -22,12 +22,19 @@
       
       </div>
       <div class="progressBar">
-        <div class="lineUp">To do <img src="img/plus button.png"></div>
-        <div class="lineUp">In  progress<img src="img/plus button.png"></div>
-        <div class="lineUp">Await Feedback<img src="img/plus button.png"></div>
-        <div class="lineUp"> Done</div>
+        <div class="lineUp"><div class="progressHead">To do <img src="img/plus button.png"></div></div>
+        <div class="lineUp"><div class="progressHead">In  progress<img src="img/plus button.png"></div></div>
+        <div class="lineUp"><div class="progressHead">Await Feedback<img src="img/plus button.png"></div></div>
+        <div class="lineUp"> <div class="progressDone">Done</div></div>
       </div>
       </div>
+    </div>
+    <div class="taskWrapper" >
+        <div class="toDoColumn">
+            <div>To do</div></div>
+        <div class="column"><div class="card">Progress</div></div>
+        <div class="column"><div class="card">Progress</div></div>
+        <div class="column"><div class="card">Progress</div></div>
     </div>
   </body>
 </html>
