log in function first commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./register.html" class="cursorPointer darkBtn fontBold fontSize16 noDecoration">Sign up</a>
     </section>
     <section class="overDivFormLogIn opacity0to1">
-        <form onsubmit="logIn()" class="formLogIn dFlex directionColumn alignCenter">
+        <form onsubmit="logIn(event)" class="formLogIn dFlex directionColumn alignCenter">
             <h1>
                 Log in
             </h1>
